2001-09-01  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.dialogs:
	* Dialogs.C:
	* QSpellchecker.[Ch]:
	* QSpellcheckerDialog.[Ch]:
	* ui/QSpellcheckerDialog.ui: add spellchecker dialog
 
2001-08-31  Edwin Leuven  <leuven@fee.uva.nl>

	* ui/QMinipageDialog.ui: layout tweak again (but it's getting better)

2001-08-31  Edwin Leuven  <leuven@fee.uva.nl>

	* ui/QGraphicsDialog.ui : minor layout tweak
	* ui/QIncludeDialog.ui : idem
	* ui/QMinipageDialog.ui: idem
	* ui/QURLDialog.ui: idem

2001-08-31  Edwin Leuven  <leuven@fee.uva.nl>

	* ui/QRefDialog.ui : minor layout tweak
	* Qref.C: idem

2001-08-31  John Levon  <moz@compsoc.man.ac.uk>

	* QTabularCreateDialog.C: fix warnings

	* emptytable.h:
	* emptytable.C:
	* ui/QTabularCreateDialog.ui: fix layout
	  when table size is changed
 
2001-08-31  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C:
	* QSearch.[Ch]:
	* QSearchDialog.[Ch]:
	* ui/QSearchDialog.ui: add search back
 
2001-08-29  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C:
	* QPrint.[Ch]:
	* QPrintDialog.[Ch]:
	* ui/QPrintDialog.ui: add print dialog back
 
2001-08-29  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.am:
	* moc/Makefile.am:
	* ui/Makefile.am:
	* ui/moc/Makefile.am: use AM_CXXFLAGS to add defines

2001-08-29  Angus Leeming  <a.leeming@ic.ac.uk>

	* QAbout.C: added a using std::getline directive.

	* QCitationDialog.C (doFind): removed const from argument to make it
	consistent with the header file.

	* QDocument.[Ch] (c-tor): moved declaration of into .C file. Compilation
	was failing with "incomplete type is not allowed" in instantiation
	of boost::scoped_ptr<QDocumentDialog> dialog_.

	* QLog.C: added a couple of using std::xyz directives.

	* QPreambleDialog.C: added a using std::getline directive.

	* QToc.C: using SigC::slot directive.

2001-08-29  Edwin Leuven  <leuven@fee.uva.nl>

	* ui/QURLDialog.ui : minor layout tweak

2001-08-29  John Levon  <moz@compsoc.man.ac.uk>

	* QPreamble.[Ch]:
	* QPreambleDialog.[Ch]: