@@ -1,3 +1,8 @@
+2001-09-02  Edwin Leuven  <leuven@fee.uva.nl>
+
+	* QMinipage.C: remove radiobutton add combox
+	* ui/QMinipageDialog.ui: + buttons at bottom
+
 2001-09-01  John Levon  <moz@compsoc.man.ac.uk>
 
 	* Makefile.dialogs:
